--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,27 @@
 .Tick {
     background-color: yellow;
 }
+
+.FancyBorder {
+    padding: 4rem 8rem;
+    display: inline-block;
+    border: 3px solid #333333;
+    font-size: 2.5rem;
+    border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
+    text-transform: uppercase;
+    letter-spacing: 0.3ch;
+    background: #ffffff;
+    position: relative;
+}
+
+.FancyBorder-blue {
+    border-color: blue;
+}
+
+.FancyBorder-red {
+    border-color: red;
+}
+
+.FancyBorder-green {
+    border-color: green;
+}
